# storage/api-docs/api-docs.json
@@ -39,7 +39,7 @@
                 }
             }
         },
-        "/events/{id}": {
+        "/api/events/{id}": {
             "get": {
                 "tags": [
                     "Event"
@@ -120,7 +120,7 @@
                 }
             }
         },
-        "/events": {
+        "/api/events": {
             "put": {
                 "tags": [
                     "Event"
@@ -163,7 +163,7 @@
                 }
             }
         },
-        "/events/{id}/options": {
+        "/api/events/{id}/options": {
             "get": {
                 "tags": [
                     "EventOptions"
@@ -191,32 +191,6 @@
                     },
                     "400": {
                         "description": "Invalid ID supplied"
-                    }
-                }
-            }
-        },
-        "/events/detail/{id}": {
-            "get": {
-                "tags": [
-                    "Event"
-                ],
-                "summary": "Show event",
-                "description": "Returns 'event' with 'helps' associated with them",
-                "operationId": "showEvent",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Event id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation"
                     }
                 }
             }
